# ipsec-recipe

./: README.md  child_sa.diff  env_setup_acc.sh  install_dep_packages_acc.sh  ipsec_offload.diff
.github/: CODEOWNERS
.github/workflows/: download-tarball.yml
docs/: deployment.md
ipsec_offload_plugin/: combined_rcp_ipsec_offload.conf  ipsec_offload.conf  ss_3_5_13.diff  ss_5_9_13_offload.diff  swanbuild_p4.sh
ipsec_offload_plugin/ipsec_offload/: Makefile.am  Makefile.in  ipsec_grpc_connect.cc  ipsec_grpc_connect.h  ipsec_offload.c  ipsec_offload.h  ipsec_offload_plugin.c  ipsec_offload_plugin.h  ipsec_p4rt_client.cc  log_plugin.cc  log_plugin.h  utils.cc  utils.h
ipsec_offload_plugin/ipsec_offload/gnmi/: Makefile.am  configure.ac
ipsec_offload_plugin/ipsec_offload/p4runtime/: Makefile.am
ipsec_offload_plugin/ipsec_offload/p4runtime/p4/config/v1/: p4info.proto
ipsec_offload_plugin/ipsec_offload/p4runtime/p4/v1/: p4runtime.proto
